--- a/2/LendingTree/LTWeb/Views/Questions/ShowInner.cshtml
+++ b/2/LendingTree/LTWeb/Views/Questions/ShowInner.cshtml
@@ -65,6 +65,40 @@
             break;
         case "phone":
         <input name="@Model.Key" type="text" value="@Model.Answer" class="validate[required,custom[phone]]" data-prompt-position="@promptPosition" />
+         
+   
+    
+    
+     <a href="#" class="tip2">
+
+            <div class="explain-this">
+                Explain this <span>
+
+                    <div id="tip-list2">
+                        By providing a phone number, you are agreeing that <br />LendingTree, 
+                        its Network Lenders, and/or partners may <br />contact you at this number, or another number 
+                        that you <br />later provide. You also agree to receive calls and messages <br />from automated 
+                        dialing systems and/or by pre-recorded <br /> message, and text messages (where applicable) 
+                        at these <br />numbers. Normal cell phone charges may apply if you <br />provide a cellular number. 
+                        You may continue with our<br /> services without providing a phone number by calling <br />
+                        1-888-272-1355 or by visiting LendingTree LoanExplorer. 
+                        <br />You may opt-out of receiving calls at any time by <br />clicking 
+                        Do-Not-Call.
+
+       
+
+                    </div>
+
+                </span>
+            </div>
+
+        </a>
+    
+    
+        
+       
+    
+    
             break;   
         case "phone2":
         <input name="@Model.Key" type="text" value="@Model.Answer" data-prompt-position="@promptPosition" />
