--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Home/PerformanceVis.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Home/PerformanceVis.cshtml
@@ -3,8 +3,7 @@
 </div>
 
 <script>
-    function CreatePerformanceChart(categories, values, valueFormat, culture, height) {
-        kendo.culture(culture);
+    function CreatePerformanceChart(categories, values, valueFormat, height) {
         $("#perfChart").kendoChart({
             chartArea: {
                 height: height
