--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Reports/_AffiliateReportPartial.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Reports/_AffiliateReportPartial.cshtml
@@ -29,6 +29,7 @@
     }
 
     function SetupAffiliateReportGrid() {
+        kendo.culture(cultureGlobal);
         $('#affrep_dateRangeSel').kendoDropDownList();
         $('#affrep_startdate').kendoDatePicker({ footer: ' ' });
         $('#affrep_enddate').kendoDatePicker({ footer: ' ' });
