--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Reports/_CPMSummaryPartial.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Reports/_CPMSummaryPartial.cshtml
@@ -69,6 +69,7 @@
     }
 
     function SetupCPMSummaryGrid(url) {
+        kendo.culture(cultureGlobal);
         $('#cpmsum_dateRangeSel').kendoDropDownList();
         $('#cpmsum_startdate').kendoDatePicker({ start: "year", depth: "year", format: "MM/yyyy", footer: " " });
         $('#cpmsum_enddate').kendoDatePicker({ start: "year", depth: "year", format: "MM/yyyy", footer: " " });
