--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Reports/_ConversionReportPartial.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Reports/_ConversionReportPartial.cshtml
@@ -34,6 +34,7 @@
     }
 
     function SetupConversionReportGrid() {
+        kendo.culture(cultureGlobal);
         $('#conrep_dateRangeSel').kendoDropDownList();
         $('#conrep_startdate').kendoDatePicker({ footer: ' ' });
         $('#conrep_enddate').kendoDatePicker({ footer: ' ' });
