--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Home/Index.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Home/Index.cshtml
@@ -402,7 +402,7 @@
 
         // Returns val as a culture formatted string.
         function FormatCurr(val, culture) {
-            kendo.culture(culture);
+            //kendo.culture(culture);@* show all in USD for now *@
             return kendo.toString(val, "c");
         }
 
