fix setting cultureGlobal (affected CampPerf); fix left-join issue in GetWeekStats

--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Home/Index.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Home/Index.cshtml
@@ -206,6 +206,7 @@
 
         // ready function
         $(function () {
+            cultureGlobal = '@Model.Culture';
             LoadMainContacts();
             LoadDashboard();
             SetupTabs();
