--- a/3/ClientPortal.Web/ClientPortal.Web/Views/SearchHome/ChannelPerf.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/SearchHome/ChannelPerf.cshtml
@@ -8,10 +8,16 @@
     </div>
 </div>
 
+<style>
+.k-grid-footer{
+    display: none;
+}
+</style>
+
 <script>
     $(function () {
-        var channelperfDS = CreateSummaryDataSource('@Url.Action("ChannelPerfData", "SearchReports")', null, true);
-        CreateSummaryGrid(channelperfDS, $('#channelperfGrid'), 550, 'Channel', 20, 2, false, false, false, function (e) {
+        var channelperfDS = CreateSummaryDataSource('@Url.Action("ChannelPerfData", "SearchReports")', null, true, false, 0);
+        CreateSummaryGrid(channelperfDS, $('#channelperfGrid'), 550, 'Channel', 17, 2, false, false, false, function (e) {
             DetailInit(e, '@Url.Action("CampaignPerfData", "SearchReports")');
         });
         channelperfDS.read();
