--- a/3/ClientPortal.Web/ClientPortal.Web/Views/SearchHome/Dashboard.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/SearchHome/Dashboard.cshtml
@@ -27,7 +27,7 @@
 
 <script>
     $(function () {
-        var weeksumDS = CreateSummaryDataSource('@Url.Action("WeekSumData", "SearchReports")', null, false);
+        var weeksumDS = CreateSummaryDataSource('@Url.Action("WeekSumData", "SearchReports")', null, false, false, 0);
         CreateSummaryGrid(weeksumDS, $('#weeksumGrid'), 300, 'Week', 10, 0, true, false, false, null);
 
         CreateRevROASChart(weeksumDS, 'weekrevChart', 'Weekly Revenue vs. ROAS Performance');
