LT: add the word "Initial"

--- a/2/LendingTree/LTWeb/Views/Shared/_LTLayout.cshtml
+++ b/2/LendingTree/LTWeb/Views/Shared/_LTLayout.cshtml
@@ -34,7 +34,7 @@
                     <div class="orange-bar-continue"></div>
                 </div>  
                  
-                    <h2>Refinance Rates From</h2>
+                    <h2>Initial Refinance Rates From</h2>
                     <div class="rate">
                         @Html.Raw(LTWeb.Session.Admin["Rate1"])
                     </div>
