--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -2,13 +2,17 @@
 
 @if (Model.Count == 0)
 {
+@*
     <div class="message-info">
         <p>There are no external authentication services configured. See <a href="http://go.microsoft.com/fwlink/?LinkId=252166">this article</a>
         for details on setting up this ASP.NET application to support logging in via external services.</p>
     </div>
+*@
 }
 else
 {
+    <h3>Add an external login</h3>
+
     using (Html.BeginForm("ExternalLogin", "Account", new { ReturnUrl = ViewBag.ReturnUrl }))
     {
     @Html.AntiForgeryToken()
