/Home/Go (fixup login redirects; 'Cancel' link from /Account/Manage)

--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Account/Manage.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Account/Manage.cshtml
@@ -20,6 +20,8 @@ else
     @Html.Partial("_SetPasswordPartial")
 }
 
+<p>@Html.ActionLink("Cancel", "Go", "Home")</p>
+
 <section id="externalLogins">
     @Html.Action("RemoveExternalLogins")
 
