SynchCampaigns from web

--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/Offers/Show.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/Offers/Show.cshtml
@@ -25,3 +25,6 @@ Campaigns:
 <br />
 Drops:
 @Html.Partial("DropReport", @Model.DropReport)
+
+<br />
+@Html.ActionLink("Synch Campaigns", "SynchCampaigns", new { offerid = Model.OfferId })
